# test-daemon

./: Cargo.toml  daemonize.fish  nfs-daemon.service  readme.md
src/: client.rs  daemon.rs  shared.rs
